...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="90dp"
    android:background="@drawable/loginbg"
    tools:context="com.example.asus.klasseandroid.general.Login">

<EditText
    android:id="@+id/userId"
    android:textColor="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="User ID"
    android:imeActionId="6"
    android:imeActionLabel="@string/action_sign_in_short"
    android:imeOptions="actionUnspecified"
    android:maxLines="1"
    android:singleLine="true" />

<EditText
    android:id="@+id/password"
    android:textColor="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Password"
    android:imeActionId="6"
    android:imeOptions="actionUnspecified"
...
    android:maxLines="1"
    android:singleLine="true" />



<Button
    android:id="@+id/signin"
    style="@android:style/Widget.DeviceDefault.Button.Inset"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="#2CC9BA"
    android:elevation="20dp"
    android:padding="20dp"
    android:text="Sign in"
    android:textAlignment="center"
    android:textColor="#ffffff"
    android:textStyle="bold" />

</LinearLayout>

