...
        android:src="@drawable/klasse"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
         />

    <Button
        android:id="@+id/student"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="#03705F"
...
